--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -50,6 +50,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5 
 
 setw -g aggressive-resize on
+set-option -g renumber-windows on
 
 # auto window rename
 set-window-option -g automatic-rename
