--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -21,14 +21,19 @@ set -g history-limit 10000
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up 
+bind-key -T copy-mode-vi v     send -X begin-selection
+bind-key -T copy-mode-vi Y     send -X copy-end-of-line
+bind-key -T copy-mode-vi V     send -X rectangle-toggle
+bind-key -T copy-mode-vi PPage send -X page-up
+bind-key -T copy-mode-vi NPage send -X page-down
+bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # easy-to-remember split pane commands
 bind | split-window -h
 bind - split-window -v
+bind-key = select-layout even-vertical
+bind-key + select-layout even-horizontal
 unbind '"'
 unbind %
 # moving between panes with vim movement keys
