update tmux config to the new style setup

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -4,11 +4,13 @@
 # bind 'C-\' send-prefix
 
 # default statusbar colors
-set -g status-attr bright
+# set -g status-style fg=cyan,bg=colour234, bright
+set -g status-style bright
 set -g status-fg cyan
 set -g status-bg colour234
-set -g window-status-current-bg colour028
-set -g window-status-current-fg white
+set-window-option -g window-status-current-style fg=white,bg=colour028
+# set -g window-status-current-bg colour028
+# set -g window-status-current-fg white
 set -g status-left '#[fg=colour166][#h] #[fg=black,bright]•'
 set -g status-right '#[fg=black,bright]• #[fg=magenta]#(cut -d " " -f1-3 /proc/loadavg) #[fg=black,bright]• #[fg=colour039]%a, %b %d #[fg=black,bright]• #[fg=colour70]%R'
 
