--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -17,7 +17,7 @@ set -g status-right '#[fg=black,bright]• #[fg=magenta]#(cut -d " " -f1-3 /proc
 set -sg escape-time 1
 
 set -g mode-keys vi
-set -g history-limit 10000
+set -g history-limit 10000000
 
 # y and p as in vim
 bind Escape copy-mode
@@ -54,7 +54,7 @@ bind -r 'BSpace' select-window -t :-
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5 
+bind -r L resize-pane -R 5
 
 setw -g aggressive-resize on
 set-option -g renumber-windows on
