--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,8 +32,8 @@ bind-key -T copy-mode-vi y     send -X copy-pipe-and-cancel "reattach-to-user-na
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # easy-to-remember split pane commands
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 bind-key = select-layout even-vertical
 bind-key + select-layout even-horizontal
 unbind '"'
